tests/errors/syntax_errors/not_implemented.py

a @= b

c = all(True for i in range(5))
